<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (c) 2014-2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>wso2</artifactId>
        <groupId>org.wso2</groupId>
        <version>1</version>
    </parent>

    <groupId>org.wso2.developerstudio</groupId>
    <artifactId>developerstudio-parent</artifactId>
    <version>4.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>WSO2 Developer Studio :: Parent POM</name>

    <modules>
        <module>extensions</module>
        <module>launcher</module>
        <module>assembly</module>
        <module>integration</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/wso2/cloud-dev-studio.git</connection>
        <developerConnection>scm:git:https://github.com/wso2/cloud-dev-studio.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/wso2/cloud-dev-studio.git</url>
    </scm>

    <properties>
        <developerstudio.release>4.0.0-SNAPSHOT</developerstudio.release>
        <appassembler.maven.plugin.version>1.8.1</appassembler.maven.plugin.version>
        <assembler.app.name>wso2studio</assembler.app.name>
        <assembler.dir.name>wso2-developer-studio-assembly</assembler.dir.name>
        <assembly.tomcat.webapp.root>webapps</assembly.tomcat.webapp.root>
        <axis2.wso2.version.aar.plugin>1.6.2</axis2.wso2.version.aar.plugin>
        <bin.location>bin</bin.location>
        <cef.version>3.1750.1738</cef.version>
        <codehauese.version>3.0.20</codehauese.version>
        <com.codenvy.platform.apirunner.version>0.24.0</com.codenvy.platform.apirunner.version>
        <com.codenvy.sdk.version>3.9.2</com.codenvy.sdk.version>
        <com.google.gwt.gin.version>2.1.2</com.google.gwt.gin.version>
        <com.google.gwt.version>2.6.0</com.google.gwt.version>
        <com.googlecode.gwtquery.version>1.4.2</com.googlecode.gwtquery.version>
        <commons.io.version>2.4</commons.io.version>
        <conf.location>conf</conf.location>
        <emma.version>2.1.5320</emma.version>
        <icons.location>icons</icons.location>
        <kepler-repo.url>http://download.eclipse.org/releases/kepler</kepler-repo.url>
        <lib.location>lib</lib.location>
        <logs.location>logs</logs.location>
        <maven-model.version>3.2.3</maven-model.version>
        <maven.clean.plugin.version>2.6</maven.clean.plugin.version>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
        <maven.istall.plugin.version>2.5.1</maven.istall.plugin.version>
        <maven.sortpom.plugin.version>2.3.0</maven.sortpom.plugin.version>
        <maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
        <org.eclipse.swt.version>4.4</org.eclipse.swt.version>
        <platform.integration.utils.version>4.3.0</platform.integration.utils.version>
        <previous.version>4.2.0</previous.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.scm.id>scm-server-id</project.scm.id>
        <selenium.version>1.0-20081010.060147</selenium.version>
        <skipUiTests>true</skipUiTests>
        <slf4j.version>1.7.7</slf4j.version>
        <swtbot-repo.url>http://download.eclipse.org/technology/swtbot/releases/latest</swtbot-repo.url>
        <temp.location>temp</temp.location>
        <test.framework.version>4.3.1</test.framework.version>
        <tomcat.version>7.0.34</tomcat.version>
        <tycho.maven.version>0.19.0</tycho.maven.version>
        <tycho.version>0.19.0</tycho.version>
        <uitest.vmparams>-Xms2048m -Xmx3096m -XX:MaxPermSize=1024m</uitest.vmparams>
        <zip4j.version>1.3.2</zip4j.version>
        <cef.binary.version>1.0.0</cef.binary.version>
        <apache.common-validator.version>1.4.0</apache.common-validator.version>
        <apache.httpclient.version>4.3.6</apache.httpclient.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.wso2.carbon.automationutils</groupId>
                <artifactId>org.wso2.carbon.integration.common.admin.client</artifactId>
                <version>${platform.integration.utils.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.automationutils</groupId>
                <artifactId>org.wso2.carbon.integration.common.extensions</artifactId>
                <version>${platform.integration.utils.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.automationutils</groupId>
                <artifactId>org.wso2.carbon.integration.common.tests</artifactId>
                <version>${platform.integration.utils.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.automationutils</groupId>
                <artifactId>org.wso2.carbon.integration.common.utils</artifactId>
                <version>${platform.integration.utils.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.automation</groupId>
                <artifactId>org.wso2.carbon.automation.engine</artifactId>
                <version>${test.framework.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.automation</groupId>
                <artifactId>org.wso2.carbon.automation.extensions</artifactId>
                <version>${test.framework.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.wso2.carbon.automation</groupId>
                <artifactId>org.wso2.carbon.automation.test.utils</artifactId>
                <version>${test.framework.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>codenvy-public-repo</id>
            <name>codenvy public</name>
            <url>https://maven.codenvycorp.com/content/groups/public/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>wso2-public-repo</id>
            <name>wso2 public</name>
            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>swt-repo</id>
            <url>https://swt-repo.googlecode.com/svn/repo/</url>
        </repository>
        <repository>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
            <id>wso2-nexus</id>
            <name>WSO2 internal Repository</name>
            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
        </repository>
        <repository>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
            <id>wso2.releases</id>
            <name>WSO2 internal Repository</name>
            <url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
        </repository>
        <repository>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
            </snapshots>
            <id>wso2.snapshots</id>
            <name>WSO2 Snapshot Repository</name>
            <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>kepler</id>
            <url>${kepler-repo.url}</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>swtbot</id>
            <url>${swtbot-repo.url}</url>
            <layout>p2</layout>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>codenvy-public-repo</id>
            <name>codenvy public</name>
            <url>https://maven.codenvycorp.com/content/groups/public/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.google.code.sortpom</groupId>
                <artifactId>maven-sortpom-plugin</artifactId>
                <version>${maven.sortpom.plugin.version}</version>
                <configuration>
                    <expandEmptyElements>false</expandEmptyElements>
                    <nrOfIndentSpace>4</nrOfIndentSpace>
                    <createBackupFile>false</createBackupFile>
                    <sortProperties>true</sortProperties>
                    <sortDependencies>scope,groupId,artifactId</sortDependencies>
                    <verifyFail>Stop</verifyFail>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <preparationGoals>clean install</preparationGoals>
                    <autoVersionSubmodules>false</autoVersionSubmodules>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>0.19.0</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.5.8.201207111220</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>../target/jacoco.exec</destFile>
                            <includes>
                                <include>mathutils.*</include>
                            </includes>
                            <append>true</append>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
